--- a/sobremesas.html
+++ b/sobremesas.html
@@ -1,20 +1,32 @@
-<header>
-  <h1>Receitas com afeto</h1>
-  <nav>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="massas.html">Almoço em família</a></li>
-    </ul>
-  </nav>
-</header>
-<main></main>
-<footer>
-  <div>
-    <p>Cadastre-se e receba novidades por email!!</p>
-    <form>
-      <input type="text" name="nome" placeholder="Digite seu Nome" />
-      <input type="email" name="email" placeholder="Digite seu Email" />
-      <input type="submit" name="enviar" value="Enviar" />
-    </form>
-  </div>
-</footer>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <h1>Receitas com afeto</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="massas.html">Almoço em família</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer>
+      <div>
+        <p>Cadastre-se e receba novidades por email!!</p>
+        <form>
+          <input type="text" name="nome" placeholder="Digite seu Nome" />
+          <input type="email" name="email" placeholder="Digite seu Email" />
+          <input type="submit" name="enviar" value="Enviar" />
+        </form>
+      </div>
+    </footer>
+  </body>
+</html>
