--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet "
+    />
 
     <title>Receitas Afetivas</title>
   </head>
@@ -34,10 +38,12 @@
       </section>
     </main>
     <footer>
-      <div>
-        <p>Cadastre-se e receba novidades por email!!</p>
+      <p>Cadastre-se e receba novidades por email!!</p>
+      <div class="form">
         <form>
+          <label>Nome:</label>
           <input type="text" name="nome" placeholder="Digite seu Nome" />
+          <label>E-mail:</label>
           <input type="email" name="email" placeholder="Digite seu Email" />
           <input type="submit" name="enviar" value="Enviar" />
         </form>
