--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Receitas com afeto</h1>
       <nav>
         <ul>
-          <li><a href="massas.html">Almoço em família</a></li>
+          <li><a href="almoco.html">Almoço em família</a></li>
           <li><a href="sobremesas.html">Adoçando o dia</a></li>
         </ul>
       </nav>
