Feat: Inlcuindo receitas.

--- a/almoco.html
+++ b/almoco.html
@@ -33,7 +33,45 @@
           <li>Sal e cominho a gosto</li>
         </ul>
         <h4>Molho:</h4>
+        <ul>
+          <li>3 dentes de alho</li>
+          <li>1/2 cebola média ralada</li>
+          <li>1 pitada de cominho</li>
+          <li>1 pote de requeijão cremoso</li>
+          <li>1 pacote de queijo parmesão ralado</li>
+          <li>1 lata de creme de leite</li>
+          <li>1 1/2 colhe de farinha de trigo</li>
+          <li>1/2 de leite</li>
+          <li>Queijo Gorgonzola</li>
+          <li>Sal a gosto</li>
+        </ul>
+        <h4>Modo de fazer:</h4>
+        <p>
+          Em uma panela refogue o alho, cominho e a cebola na manteiga. Quando a
+          cebola estiver transparente acrescente o creme de leite e o requeijao
+          cremoso, mexendo sempre. Depois acrescente o parmesão ralado e o
+          gorgonzola a gosto. Em uma vasilha a parte misture a farinha de trigo
+          e o leite. Jogue essa mistura e mexa semprar até o creme ficar numa
+          consistência de mingau.
+        </p>
+
         <h4>Preparo da Carne</h4>
+
+        <p>
+          Pise dois alhos grandes com sal e um pouco de cominho a gosto, Corte a
+          carne em iscas, tempere a carne juntamente com a cebola. Refogue numa
+          panela e acrescente um pouco de água e deixe cozinhar por 5 minutos em
+          fogo médio tampado, sempre observando.
+        </p>
+
+        <h4>Montando o pão:</h4>
+        <p>
+          Faça um corte em cima do pão italiano em formato de círculo. tire o
+          miolo e reserve. Passe um pouco de manteiga ou azeite doce no pao e
+          leve ao forno médio por 20 min, depois acrescente o molho dos filés e
+          esta pronto para consumo. O miolo pode ser cortado, passar azeite ou
+          manteiga e levar ao forno também e poderá ser servido junto ao pão.
+        </p>
       </section>
       <section>
         <h2>Lasanha</h2>
