Feat: Inlcuindo informações  e texto.

--- a/almoco.html
+++ b/almoco.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Blog com receitas." />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
       rel="stylesheet "
     />
-    <title>Document</title>
+    <title>Blog de Receitas Afetivas</title>
   </head>
   <body>
     <header>
@@ -22,108 +23,122 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h2>Filé ao molho gorgonzola no pão italiano - Entrada</h2>
-        <h3>Ingedientes</h3>
-        <ul>
-          <li>1 Pão italiano</li>
-          <li>Manteiga</li>
-          <li>1/2 kg de filé especial ou filé mignon</li>
-          <li>Alho e cebola</li>
-          <li>Sal e cominho a gosto</li>
-        </ul>
-        <h4>Molho:</h4>
-        <ul>
-          <li>3 dentes de alho</li>
-          <li>1/2 cebola média ralada</li>
-          <li>1 pitada de cominho</li>
-          <li>1 pote de requeijão cremoso</li>
-          <li>1 pacote de queijo parmesão ralado</li>
-          <li>1 lata de creme de leite</li>
-          <li>1 1/2 colhe de farinha de trigo</li>
-          <li>1/2 de leite</li>
-          <li>Queijo Gorgonzola</li>
-          <li>Sal a gosto</li>
-        </ul>
-        <h4>Modo de fazer:</h4>
-        <p>
-          Em uma panela refogue o alho, cominho e a cebola na manteiga. Quando a
-          cebola estiver transparente acrescente o creme de leite e o requeijao
-          cremoso, mexendo sempre. Depois acrescente o parmesão ralado e o
-          gorgonzola a gosto. Em uma vasilha a parte misture a farinha de trigo
-          e o leite. Jogue essa mistura e mexa semprar até o creme ficar numa
-          consistência de mingau.
-        </p>
+      <section id="almoco">
+        <div>
+          <h2>Filé ao molho gorgonzola no pão italiano</h2>
+          <img
+            src="./imagens/pao.jpg"
+            alt="Imagem do pão italiano com isca de filé ao molho gorgonzola"
+            title="pão"
+          />
+          <h3>Ingedientes</h3>
+          <ul>
+            <li>1 Pão italiano</li>
+            <li>Manteiga</li>
+            <li>1/2 kg de filé especial ou filé mignon</li>
+            <li>Alho e cebola</li>
+            <li>Sal e cominho a gosto</li>
+          </ul>
+          <h4>Molho:</h4>
+          <ul>
+            <li>3 dentes de alho</li>
+            <li>1/2 cebola média ralada</li>
+            <li>1 pitada de cominho</li>
+            <li>1 pote de requeijão cremoso</li>
+            <li>1 pacote de queijo parmesão ralado</li>
+            <li>1 lata de creme de leite</li>
+            <li>1 1/2 colhe de farinha de trigo</li>
+            <li>1/2 de leite</li>
+            <li>Queijo Gorgonzola</li>
+            <li>Sal a gosto</li>
+          </ul>
+          <h4>Modo de fazer:</h4>
+          <p>
+            Em uma panela refogue o alho, cominho e a cebola na manteiga. Quando
+            a cebola estiver transparente acrescente o creme de leite e o
+            requeijao cremoso, mexendo sempre. Depois acrescente o parmesão
+            ralado e o gorgonzola a gosto. Em uma vasilha a parte misture a
+            farinha de trigo e o leite. Jogue essa mistura e mexa semprar até o
+            creme ficar numa consistência de mingau.
+          </p>
 
-        <h4>Preparo da Carne</h4>
+          <h4>Preparo da Carne</h4>
 
-        <p>
-          Pise dois alhos grandes com sal e um pouco de cominho a gosto, Corte a
-          carne em iscas, tempere a carne juntamente com a cebola. Refogue numa
-          panela e acrescente um pouco de água e deixe cozinhar por 5 minutos em
-          fogo médio tampado, sempre observando.
-        </p>
+          <p>
+            Pise dois alhos grandes com sal e um pouco de cominho a gosto, Corte
+            a carne em iscas, tempere a carne juntamente com a cebola. Refogue
+            numa panela e acrescente um pouco de água e deixe cozinhar por 5
+            minutos em fogo médio tampado, sempre observando.
+          </p>
 
-        <h4>Montando o pão:</h4>
-        <p>
-          Faça um corte em cima do pão italiano em formato de círculo. tire o
-          miolo e reserve. Passe um pouco de manteiga ou azeite doce no pao e
-          leve ao forno médio por 20 min, depois acrescente o molho dos filés e
-          esta pronto para consumo. O miolo pode ser cortado, passar azeite ou
-          manteiga e levar ao forno também e poderá ser servido junto ao pão.
-        </p>
-      </section>
-      <section>
-        <h2>Lasanha</h2>
-        <h3>Ingedientes</h3>
-        <h4>Molho bolonhesa:</h4>
-        <ul>
-          <li>1/2kg de patinho moído</li>
-          <li>5 dentes de alho</li>
-          <li>1 cebola media ralada</li>
-          <li>2 colheres de extrato de tomate elefante</li>
-          <li>1 pacote de queijo ralado</li>
-          <li>1/2 litro de leite morno</li>
-        </ul>
-        <h4>Molho Branco:</h4>
-        <ul>
-          <li>1/2 de leite</li>
-          <li>3 dentes de alho</li>
-          <li>1/2 cebola média ralada</li>
-          <li>1 pitada de cominho</li>
-          <li>1 pote de requeijão cremoso</li>
-          <li>1 pacote de queijo ralado</li>
-          <li>1 lata de creme de leite</li>
-          <li>1 1/2 colhe de farinha de trigo</li>
-          <li>Sal a gosto</li>
-        </ul>
-        <h4>Modo de Fazer - Molho bolonhesa:</h4>
-        <p>
-          Pise dois alhos grandes com sal e um pouco de cominho a gosto, tempere
-          a carne juntamente com a cebola. Refogue numa panela e acrescente um
-          pouco de água e deixe cozinhar por 5 minutos em fogo médio tampado,
-          sempre observando. Em outra panela, acrescente o resto do alho e da
-          cebola e refogue com manteiga, acrescente o extrato de tomate e deixe
-          "fritar". Após, jogue o leite morno e mexa sem parar, logo depois
-          acrescente a carne e o quejo ralado e reserve.
-        </p>
-        <h4>Modo de Fazer - Molho branco:</h4>
-        <p>
-          Em uma panela refogue o alho, cominho e a cebola na manteiga. Quando a
-          cebola estiver transparente acrescente o creme de leite e o requeijao
-          cremoso, mexendo sempre. Em uma vasilha a parte misture a farinha de
-          trigo e o leite. Jogue essa mistura e mexa semprar até o creme ficar
-          numa consistência de mingau.
-        </p>
-        <h4>Montagem da lasanha:</h4>
+          <h4>Montando o pão:</h4>
+          <p>
+            Faça um corte em cima do pão italiano em formato de círculo. tire o
+            miolo e reserve. Passe um pouco de manteiga ou azeite doce no pao e
+            leve ao forno médio por 20 min, depois acrescente o molho dos filés
+            e esta pronto para consumo. O miolo pode ser cortado, passar azeite
+            ou manteiga e levar ao forno também e poderá ser servido junto ao
+            pão.
+          </p>
+        </div>
+        <div>
+          <h2>Lasanha</h2>
+          <img
+            src="./imagens/lasanha.jpg"
+            alt="Imagem de um pirex de vidro com lasanha"
+            title="lasanha"
+          />
+          <h3>Ingedientes</h3>
+          <h4>Molho bolonhesa:</h4>
+          <ul>
+            <li>1/2kg de patinho moído</li>
+            <li>5 dentes de alho</li>
+            <li>1 cebola media ralada</li>
+            <li>2 colheres de extrato de tomate elefante</li>
+            <li>1 pacote de queijo ralado</li>
+            <li>1/2 litro de leite morno</li>
+          </ul>
+          <h4>Molho Branco:</h4>
+          <ul>
+            <li>1/2 de leite</li>
+            <li>3 dentes de alho</li>
+            <li>1/2 cebola média ralada</li>
+            <li>1 pitada de cominho</li>
+            <li>1 pote de requeijão cremoso</li>
+            <li>1 pacote de queijo ralado</li>
+            <li>1 lata de creme de leite</li>
+            <li>1 1/2 colhe de farinha de trigo</li>
+            <li>Sal a gosto</li>
+          </ul>
+          <h4>Modo de Fazer - Molho bolonhesa:</h4>
+          <p>
+            Pise dois alhos grandes com sal e um pouco de cominho a gosto,
+            tempere a carne juntamente com a cebola. Refogue numa panela e
+            acrescente um pouco de água e deixe cozinhar por 5 minutos em fogo
+            médio tampado, sempre observando. Em outra panela, acrescente o
+            resto do alho e da cebola e refogue com manteiga, acrescente o
+            extrato de tomate e deixe "fritar". Após, jogue o leite morno e mexa
+            sem parar, logo depois acrescente a carne e o quejo ralado e
+            reserve.
+          </p>
+          <h4>Modo de Fazer - Molho branco:</h4>
+          <p>
+            Em uma panela refogue o alho, cominho e a cebola na manteiga. Quando
+            a cebola estiver transparente acrescente o creme de leite e o
+            requeijao cremoso, mexendo sempre. Em uma vasilha a parte misture a
+            farinha de trigo e o leite. Jogue essa mistura e mexa semprar até o
+            creme ficar numa consistência de mingau.
+          </p>
+          <h4>Montagem da lasanha:</h4>
 
-        <p>
-          Escolha um pirex de vidro e unte com manteiga, acrecente um pouco do
-          molho bolonhesa, massa pré cozida para lasanha, molho branco, massa de
-          lasanha, molho bolonhesa, até que encha o refratário. No final,
-          salpique oregano e leve ao forno por 20min. O ideal que tenha bastante
-          molho.
-        </p>
+          <p>
+            Escolha um pirex de vidro e unte com manteiga, acrecente um pouco do
+            molho bolonhesa, massa pré cozida para lasanha, molho branco, massa
+            de lasanha, molho bolonhesa, até que encha o refratário. No final,
+            salpique oregano e leve ao forno por 20min. O ideal que tenha
+            bastante molho.
+          </p>
+        </div>
       </section>
     </main>
     <footer>
