Feat: incluindo informações e links.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Blog com receitas." />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
       rel="stylesheet "
     />
 
-    <title>Receitas Afetivas</title>
+    <title>Blog de Receitas Afetivas</title>
   </head>
   <body>
     <header>
@@ -19,6 +20,7 @@
         <ul>
           <li><a href="almoco.html">Almoço em família</a></li>
           <li><a href="sobremesas.html">Adoçando o dia</a></li>
+          <li><a href="contato.html">Contatos</a></li>
         </ul>
       </nav>
     </header>
@@ -47,7 +49,7 @@
           <input type="email" name="email" placeholder="Digite seu Email" />
           <input type="submit" name="enviar" value="Enviar" />
         </form>
-      </div>
+      
     </footer>
   </body>
 </html>
