Feat: Incluindo informações

--- a/sobremesas.html
+++ b/sobremesas.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Blog com receitas." />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
       rel="stylesheet "
     />
-    <title>Document</title>
+    <title>Blog de Receitas Afetivas</title>
   </head>
   <body>
     <header>
@@ -22,68 +23,76 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h2>Pavê</h2>
-        <h3>Ingedientes</h3>
-        <ul>
-          <li>2 latas de leite condensado</li>
-          <li>Leite integral - mesma medida da lata de leite condensado</li>
-          <li>4 gemas de ovos</li>
-          <li>Essência de baunilha</li>
-          <li>1 colher de sopa de Maizena</li>
-          <li>3 colheres de sopa de Nescau - massa de chocolate</li>
-          <li>Biscoito Maizena</li>
-          <li>1 Caixa de chantili gelado</li>
-        </ul>
+      <section id="sobremesa">
+        <div class="pave">
+          <h2>Pavê</h2>
+          <img src="./imagens/pavê.png" alt="Imagem de uma pavê" title="pavê" />
+          <h3>Ingedientes</h3>
+          <ul>
+            <li>2 latas de leite condensado</li>
+            <li>Leite integral - mesma medida da lata de leite condensado</li>
+            <li>4 gemas de ovos</li>
+            <li>Essência de baunilha</li>
+            <li>1 colher de sopa de Maizena</li>
+            <li>3 colheres de sopa de Nescau - massa de chocolate</li>
+            <li>Biscoito Maizena</li>
+            <li>1 Caixa de chantili gelado</li>
+          </ul>
 
-        <h4>Modo de Fazer - massa branca:</h4>
-        <p>
-          Numa panela coloque uma lata de leite condensado, a mesma medida da
-          lata de leite integral, duas gemas, duas gotas de essência de
-          baunilha, e a Maizena. Leve em fogo médio e mexa até ficar com aspecto
-          de mingau. Reserve.
-        </p>
-        <h4>Modo de Fazer - massa chocolate:</h4>
-        <p>
-          Numa panela coloque uma lata de leite condensado, a mesma medida da
-          lata de leite integral, duas gemas, o nescau e a Maizena. Leve em fogo
-          médio e mexa até ficar com aspecto de mingau. Reserve.
-        </p>
-        <h4>Modo de Fazer - Montagem:</h4>
-        <p>
-          Em um refratário de vidro coloque uma camada de massa branca, depois
-          faça uma "cama" de biscoito, depois coloque a massa de chocolate e
-          continue com o biscoito ate que acabe as massas. Por fim, bata o
-          chantili gelado na batedeira até ficar consistente e jogue por cima
-          das massas. Pode triturar chocolate bis por cima e levar a geladeira
-          por duas horas.
-        </p>
-      </section>
-      <section>
-        <h2>Torta de Limão</h2>
-        <h3>Ingedientes</h3>
-        <ul>
-          <li>2 latas de leite condensado</li>
-          <li>1 lata de creme de leite</li>
-          <li>sumo de 6 limoes</li>
-          <li>1 pacote de biscoito maizena</li>
-          <li>4 colheres de sopa cheias de manteiga derretida</li>
-        </ul>
+          <h4>Modo de Fazer - massa branca:</h4>
+          <p>
+            Numa panela coloque uma lata de leite condensado, a mesma medida da
+            lata de leite integral, duas gemas, duas gotas de essência de
+            baunilha, e a Maizena. Leve em fogo médio e mexa até ficar com
+            aspecto de mingau. Reserve.
+          </p>
+          <h4>Modo de Fazer - massa chocolate:</h4>
+          <p>
+            Numa panela coloque uma lata de leite condensado, a mesma medida da
+            lata de leite integral, duas gemas, o nescau e a Maizena. Leve em
+            fogo médio e mexa até ficar com aspecto de mingau. Reserve.
+          </p>
+          <h4>Modo de Fazer - Montagem:</h4>
+          <p>
+            Em um refratário de vidro coloque uma camada de massa branca, depois
+            faça uma "cama" de biscoito, depois coloque a massa de chocolate e
+            continue com o biscoito ate que acabe as massas. Por fim, bata o
+            chantili gelado na batedeira até ficar consistente e jogue por cima
+            das massas. Pode triturar chocolate bis por cima e levar a geladeira
+            por duas horas.
+          </p>
+        </div>
+        <div class="torta">
+          <h2>Torta de Limão</h2>
+          <img
+            src="./imagens/torta-de-limao.jpg"
+            alt="Torta de Limão"
+            title="sobremesa torta"
+          />
+          <h3>Ingedientes</h3>
+          <ul>
+            <li>2 latas de leite condensado</li>
+            <li>1 lata de creme de leite</li>
+            <li>sumo de 6 limoes</li>
+            <li>1 pacote de biscoito maizena</li>
+            <li>4 colheres de sopa cheias de manteiga derretida</li>
+          </ul>
 
-        <h4>Modo de Fazer - Massa:</h4>
-        <p>
-          Triture o pacote de biscoito maizena até virar uma farinha, depois
-          misture a manteiga derretida. Numa assadeira de fundo falso, monte a
-          massa no fundo e laterais. Leve em forno medio por 20min.
-        </p>
+          <h4>Modo de Fazer - Massa:</h4>
+          <p>
+            Triture o pacote de biscoito maizena até virar uma farinha, depois
+            misture a manteiga derretida. Numa assadeira de fundo falso, monte a
+            massa no fundo e laterais. Leve em forno medio por 20min.
+          </p>
 
-        <h4>Modo de Fazer - Recheio:</h4>
-        <p>
-          Coloque no liquidificador o creme de leite, o leite condensado e o
-          sumo dos limões e bata por 6min. Após assada, aguarde a massa esfriar
-          e jogue esse creme dentro e decore com raspas de limão. Leve a
-          geladeira por 2horas.
-        </p>
+          <h4>Modo de Fazer - Recheio:</h4>
+          <p>
+            Coloque no liquidificador o creme de leite, o leite condensado e o
+            sumo dos limões e bata por 6min. Após assada, aguarde a massa
+            esfriar e jogue esse creme dentro e decore com raspas de limão. Leve
+            a geladeira por 2horas.
+          </p>
+        </div>
       </section>
     </main>
     <footer>
