Feat: Incluindo rodapé e link de arquivo JS.

--- a/contato.html
+++ b/contato.html
@@ -22,18 +22,37 @@
         </ul>
       </nav>
     </header>
+    <main></main>
 
-	<footer>
+    <footer>
       <p>Cadastre-se e receba novidades por email!!</p>
       <div class="form">
         <form>
           <label>Nome:</label>
-          <input type="text" name="nome" placeholder="Digite seu Nome" />
+          <input
+            type="text"
+            name="nome"
+            id="nome"
+            placeholder="Digite seu Nome"
+          />
           <label>E-mail:</label>
-          <input type="email" name="email" placeholder="Digite seu Email" />
-          <input type="submit" name="enviar" value="Enviar" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Digite seu Email"
+          />
+          <label>Telefone: </label>
+          <input
+            type="number"
+            name="telefone"
+            id="telefone"
+            placeholder="Digite seu telefone "
+          />
+          <button id="botaoEnviar">Enviar</button>
         </form>
-      
+      </div>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
