Feat: Inclusão de página de contatos.

--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,25 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h2>Contatos</h2>
+        <p>
+          Para contato com o Receitas com afeto encaminhe-nos um e-mail que
+          teremos maior prazer em atendê-los, com a maior brevidade possível.
+        </p>
+        <p>Desde já agradecemos seu interesse!</p>
+
+        <h3>receitascomafeto@gmail.com</h3>
+        <form>
+          <label id="recado">
+            Gosta de nossas receitas? Deixe seu recado:
+          </label>
+          <textarea id="textarea" name="recado" rows="5" cols="33"></textarea>
+          <input type="submit" id="enviarRecado" />
+        </form>
+      </section>
+    </main>
 
     <footer>
       <p>Cadastre-se e receba novidades por email!!</p>
